Fixed legend icons on mobile to be same size as on map

--- a/css/style.css
+++ b/css/style.css
@@ -89,9 +89,3 @@
     max-width: 26px;
     margin-right: 5px;
 }
-
-@media screen and (max-width: 576px) {
-    #legend img {
-        max-width: 12px;
-    }
-}
